# Rust-CUDA

./: .devcontainer.json  .gitignore  404.html  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  compile.sh  debug.sh  faq.html  features.html  index.html  katex-header.html  print.html  rust-toolchain  rust-toolchain.toml  rustc-ice-2025-03-16T03_59_24-19970.txt  searchindex.js  searchindex.json  toc.html  toc.js
crates/blastoff/: Cargo.toml
crates/blastoff/src/: context.rs  error.rs  level1.rs  level3.rs  lib.rs
crates/blastoff/src/raw/: level1.rs  level3.rs  mod.rs
crates/cuda_builder/: Cargo.toml
crates/cuda_builder/cg/: cg_bridge.cu  cg_bridge.cuh
crates/cuda_builder/src/: cg.rs  lib.rs
crates/cuda_std/: CHANGELOG.md  Cargo.toml
crates/cuda_std/assets/diagrams_xml/: streams.drawio  thread.drawio
crates/cuda_std/src/: atomic.rs  cfg.rs  cg.rs  float.rs  float_ext.rs  intrinsics.rs  io.rs  lib.rs  mem.rs  misc.rs  ptr.rs  shared.rs  thread.rs  warp.rs
crates/cuda_std/src/atomic/: intrinsics.rs  mid.rs
crates/cuda_std/src/rt/: driver_types_sys.rs  error.rs  mod.rs  sys.rs
crates/cuda_std_macros/: Cargo.toml
crates/cuda_std_macros/src/: lib.rs
crates/cudnn-sys/: Cargo.toml
crates/cudnn-sys/src/: lib.rs
crates/cust/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cust/resources/: add.cu  add.cubin  add.fatbin  add.ptx
crates/cust/src/: compile.rs  context.rs  device.rs  error.rs  event.rs  external.rs  function.rs  graph.rs  graph_dotfile.rs  legacy.rs  lib.rs  link.rs  module.rs  prelude.rs  primary.rs  stream.rs  surface.rs  texture.rs  util.rs
crates/cust/src/context/: legacy.rs  mod.rs
crates/cust/src/memory/: array.rs  locked.rs  malloc.rs  mod.rs  pointer.rs  unified.rs
crates/cust/src/memory/device/: mod.rs  (+4 more)
crates/cust_core/: Cargo.toml
crates/cust_core/src/: lib.rs
crates/cust_derive/: .gitignore  Cargo.toml  README.md
crates/cust_derive/src/: lib.rs
crates/cust_raw/: Cargo.toml  README.md  bindgen.sh  build.rs  wrapper.h
crates/cust_raw/src/: cublas_sys.rs  cublaslt_sys.rs  cublasxt_sys.rs  cuda.rs  driver_sys.rs  lib.rs  nvptx_compiler_sys.rs  nvvm_sys.rs  runtime.rs  runtime_sys.rs
crates/cust_raw/src/cublas/: core.rs  lt.rs  mod.rs  xt.rs
crates/cust_raw/src/cublas_sys/: lt.rs  mod.rs  xt.rs
crates/cust_raw/src/types/: complex.rs  driver.rs  library.rs  mod.rs  surface.rs  texture.rs  vector.rs
crates/gpu_rand/: Cargo.toml  LICENSE-RAND  README.md
crates/gpu_rand/src/: default.rs  gpurng.rs  lib.rs
crates/gpu_rand/src/xoroshiro/: common.rs  mod.rs  splitmix64.rs  xoroshiro128plus.rs  xoroshiro128plusplus.rs  xoroshiro128starstar.rs  xoroshiro64star.rs  xoroshiro64starstar.rs  xoshiro128plus.rs  xoshiro128plusplus.rs  xoshiro128starstar.rs  xoshiro256plus.rs  xoshiro256plusplus.rs  xoshiro256starstar.rs  xoshiro512plus.rs  xoshiro512plusplus.rs  xoshiro512starstar.rs
crates/nvvm/: Cargo.toml  build.rs
crates/nvvm/src/: lib.rs  sys.rs
crates/optix/: Cargo.toml  build.rs  optix_stubs.c  optix_wrapper.rs
crates/optix/examples/ex02_pipeline/: Cargo.toml  build.rs
crates/optix/examples/ex03_window/: Cargo.toml  build.rs
crates/optix/examples/ex04_mesh/: Cargo.toml  build.rs
crates/optix/src/: acceleration.md  acceleration.rs  context.md  context.rs  curve_array.rs  custom_primitive_array.rs  denoiser.md  denoiser.rs  error.rs  impl_glam.rs  instance_array.rs  introduction.md  lib.rs  module.rs  optix_wrapper.h  pipeline.md  pipeline.rs  prelude.rs  program_group.rs  shader_binding_table.md  shader_binding_table.rs  sys.rs  triangle_array.rs
crates/optix_device/: Cargo.toml
crates/optix_device/src/: hit.rs  intersect.rs  lib.rs  misc.rs  payload.rs  ray.rs  sys.rs  trace.rs  transform.rs  util.rs
crates/optix_device_macros/: Cargo.toml
crates/optix_device_macros/src/: lib.rs
crates/ptx/: Cargo.toml
crates/ptx/src/: lexer.rs  lexer_tests.rs  lib.rs  main.rs  parser.rs  types.rs
crates/ptx/src/parser/: mod.rs
crates/ptx_compiler/: Cargo.toml
crates/ptx_compiler/src/: lib.rs  sys.rs
crates/rustc_codegen_nvvm/: CHANGELOG.md  Cargo.toml  build.rs  libintrinsics.bc  libintrinsics.ll
crates/rustc_codegen_nvvm/rustc_llvm_wrapper/: PassWrapper.cpp  README.md  RustWrapper.cpp  rustllvm.h
crates/rustc_codegen_nvvm/src/: abi.rs  allocator.rs  asm.rs  attributes.rs  back.rs  builder.rs  common.rs  const_ty.rs  consts.rs  context.rs  ctx_intrinsics.rs  init.rs  int_replace.rs  intrinsic.rs  lib.rs  link.rs  llvm.rs  llvm7.rs  lto.rs  mono_item.rs  nvvm.rs  override_fns.rs  target.rs  ty.rs
crates/rustc_codegen_nvvm/src/debug_info/: create_scope_map.rs  dwarf_const.rs  metadata.rs  mod.rs  namespace.rs  util.rs
crates/rustc_codegen_nvvm_macros/: Cargo.toml
crates/rustc_codegen_nvvm_macros/src/: lib.rs
examples/cuda/cpu/add/: Cargo.toml  build.rs
examples/cuda/cpu/path_tracer/: Cargo.toml  build.rs
examples/cuda/gemm/: Cargo.toml  build.rs
examples/cuda/gemm/kernels/: Cargo.toml
examples/cuda/gemm/src/: main.rs
examples/cuda/gpu/path_tracer_gpu/: Cargo.toml
examples/cuda/path_tracer/: Cargo.toml  build.rs
examples/cuda/path_tracer/kernels/: Cargo.toml
examples/cuda/path_tracer/shaders/: image.frag  image.vert
examples/cuda/path_tracer/src/: common.rs  main.rs  renderer.rs  viewer.rs
examples/optix/denoiser/: Cargo.toml  README.md
examples/optix/denoiser/src/: main.rs
tests/compiletests/: Cargo.toml  README.md
tests/compiletests/deps-helper/: Cargo.toml
tests/compiletests/deps-helper/src/: lib.rs
tests/compiletests/src/: main.rs
tests/compiletests/ui/: hello_world.rs
tests/compiletests/ui/atomic/: atomic_operations.rs
tests/compiletests/ui/dis/: simple_add.rs  simple_add.stderr  target_feature_arch_cc.rs  target_feature_arch_cc.stderr  target_feature_base_cc.rs  target_feature_base_cc.stderr  target_feature_family_cc.rs
tests/compiletests/ui/float/: float_extensions.rs
tests/compiletests/ui/glam/: mat3_vec3_multiply.rs  mat4_operations.rs  vec3_operations.rs
xtask/: Cargo.toml
xtask/src/: extract_llfns.rs  main.rs
(+379 files in other folders)
