[workspace]
resolver = "2"
members = [
  "crates/*",
  "crates/optix/examples/ex*",
  "crates/optix/examples/ex*/device",
  "crates/optix/examples/rust/ex*",

  "xtask",

  "examples/cuda/vecadd",
  "examples/cuda/vecadd/kernels",
  "examples/cuda/gemm",
  "examples/cuda/gemm/kernels",
  "examples/cuda/path_tracer",
  "examples/cuda/path_tracer/kernels",

  "examples/optix/*",
]

exclude = [
    "crates/optix/examples/common",
]

[profile.dev.package.rustc_codegen_nvvm_v7]
opt-level = 3

[profile.dev.package.rustc_codegen_nvvm_v19]
opt-level = 3
