[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
license = "MIT"

[features]
default = ["nvvm-v19"]
nvvm-v7 = ["dep:rustc_codegen_nvvm_v7"]
nvvm-v19 = ["dep:rustc_codegen_nvvm_v19"]

[dependencies]
pico-args = "0.4.2"
rayon = "1.10"
regex = "1.11.1"
rustc_codegen_nvvm_v7 = { path = "../crates/rustc_codegen_nvvm_v7", optional = true }
rustc_codegen_nvvm_v19 = { path = "../crates/rustc_codegen_nvvm_v19", optional = true }