[package]
name = "blastoff"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo D'Ambrosio <rdambrosio016@gmail.com>"]
repository = "https://github.com/Rust-GPU/Rust-CUDA"

[dependencies]
bitflags = "2.8"
cublas_sys = { version = "0.1", path = "../cublas_sys" }
cust = { version = "0.3", path = "../cust", features = ["impl_num_complex"] }
num-complex = "0.4.6"
half = { version = "2.4.1", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
