[package]
name = "cuda_builder"
version = "0.3.0"
edition = "2021"
authors = ["Riccardo D'Ambrosio <rdambrosio016@gmail.com>", "The rust-gpu Authors"]
license = "MIT OR Apache-2.0"
description = "Builder for easily building rustc_codegen_nvvm crates"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[dependencies]
rustc_codegen_nvvm = { version = "0.3", path = "../rustc_codegen_nvvm" }
nvvm = { path = "../nvvm", version = "0.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
find_cuda_helper = { version = "0.2", path = "../find_cuda_helper" }
