[package]
name = "cuda_builder"
version = "0.3.0"
edition = "2021"
authors = ["Riccardo D'Ambrosio <rdambrosio016@gmail.com>", "The rust-gpu Authors"]
license = "MIT OR Apache-2.0"
description = "Builder for easily building rustc_codegen_nvvm crates"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[features]
default = ["nvvm-v19"]
nvvm-v7 = ["dep:rustc_codegen_nvvm_v7"]
nvvm-v19 = ["dep:rustc_codegen_nvvm_v19"]

[dependencies]
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
rustc_codegen_nvvm_v7 = { version = "0.3", path = "../rustc_codegen_nvvm_v7", optional = true }
rustc_codegen_nvvm_v19 = { version = "0.3", path = "../rustc_codegen_nvvm_v19", optional = true }
nvvm = { path = "../nvvm", version = "0.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"