[package]
name = "cuda_std"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Standard library for CUDA with rustc_codegen_nvvm"

[dependencies]
vek = { version = "0.15.1", default-features = false, features = ["libm"] }
cuda_std_macros = { version = "0.1", path = "../cuda_std_macros" }
half = "1.7.1"
bitflags = "1.3.2"
paste = "1.0.5"
