[package]
name = "cuda_std_macros"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for cuda_std"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.75", features = ["full"] }
proc-macro2 = "1"
