[package]
name = "cust_core"
version = "0.1.0"
edition = "2021"

[dependencies]
vek = { version = "0.15.1", default-features=false, features=["libm"], optional = true }
glam = { git = "https://github.com/anderslanglands/glam-rs", branch = "cuda", features=["cuda", "libm"], default-features=false, optional=true }
mint = { version = "^0.5", optional = true }

[features]
default-features = ["vek", "glam", "mint"]


