[package]
name = "cust_core"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library for cust that can be shared across CPU and GPU"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[dependencies]
vek = { version = "0.17.1", default-features=false, features=["libm"], optional = true }
glam = { version = "0.29.2", features=["cuda", "libm"], default-features=false, optional=true }
mint = { version = "^0.5", optional = true }
half = { version = "2.4.1", optional = true }
num-complex = { version = "0.4.6", optional = true }
cust_derive = { path = "../cust_derive", version = "0.2" }
