[package]
name = "cust_derive"
version = "0.2.0"
authors = ["Brook Heisler <brookheisler@gmail.com>", "Riccardo D'Ambrosio <rdambrosio016@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for cust"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.96"
quote = "1.0.38"
proc-macro2 = "1.0.93"
