[package]
name = "cust_raw"
version = "0.11.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Low level bindings to the CUDA Toolkit SDK"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"
links = "cuda"
build = "build/main.rs"

[dependencies]
libc = { version = "0.2", optional = true }

[build-dependencies]
bindgen = "0.71.1"
bimap = "0.6.3"
cc = "1.2.17"

[package.metadata.docs.rs]
features = [
    "driver",
    "runtime",
    "cublas",
    "cublasLt",
    "cublasXt",
    "nvptx-compiler",
    "nvvm",
]

[features]
default = ["driver"]
driver = []
runtime = ["driver_types", "vector_types", "texture_types", "surface_types"]
cuComplex = ["vector_types"]
driver_types = []
library_types = []
surface_types = []
texture_types = []
vector_types = []
cublas = ["runtime", "cuComplex", "library_types"]
cublasLt = ["cublas", "libc"]
cublasXt = ["cublas"]
nvptx-compiler = []
nvvm = []
