[package]
name = "optix"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Riccardo D'Ambrosio <rdambrosio016@gmail.com>"]

[features]
optix71 = []
optix72 = []
optix73 = []
default=["optix73", "impl_glam"]
impl_glam=["cust/impl_glam", "glam"]
impl_half=["cust/impl_half", "half"]

[dependencies]
cust = { version = "0.3", path = "../cust", features=["impl_mint"] }
cust_raw = { version = "0.11.2", path = "../cust_raw" }
cfg-if = "1.0.0"
bitflags = "1.3.2"
glam = { version = "0.21", features=["cuda", "libm"], default-features=false, optional=true }
half = { version = "^1.8", optional = true }
memoffset = "0.6.4"
mint = "0.5.8"
embed-doc-image = {version = "0.1.4"}

[build-dependencies]
bindgen = "0.59"
cc = "1.0.71"
find_cuda_helper = { version = "0.2", path = "../find_cuda_helper" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
