[package]
name = "ptx"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "PTX parser and analyzer"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[dependencies]
ascii = "1"
# used for lexing/serializing very large enums of instructions/opcodes
strum = { version = "0.26.3", features = ["derive"] }
smallvec = "1.13.2"
