[package]
name = "ptx_compiler"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High level bindings to CUDA's ptx compilation APIs"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[build-dependencies]
find_cuda_helper = { path = "../find_cuda_helper", version = "0.2" }
