[package]
name = "compiletests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compiletests"
path = "src/main.rs"

[dependencies]
compiletest_rs = "0.11"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cuda_builder = { workspace = true }