[package]
name = "denoiser"
version = "0.1.0"
edition = "2021"

[dependencies]
optix = { version = "0.1", path = "../../../crates/optix" }
structopt = "0.3"
cust = { version = "0.3", path = "../../../crates/cust", features = ["impl_vek", "bytemuck"] }
image = "0.25.5"
vek = { version = "0.17.1", features = ["bytemuck"] }
