[package]
name = "ex02_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix = {path = "../../"}
cust = {path = "../../../cust"}
anyhow = "1.0.44"

[build-dependencies]
find_cuda_helper = { version = "0.1", path = "../../../find_cuda_helper" }
