[package]
name = "ex02_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix = { path = "../../" }
optix-sys = { path = "../../../optix-sys" }
cust = { path = "../../../cust" }
anyhow = "1.0.44"
device = { path = "./device" }

[build-dependencies]
cuda_builder = { version = "0.3", path = "../../../cuda_builder" }
