[package]
name = "ex03_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix = { path = "../../" }
optix-sys = { path = "../../../optix-sys" }
cust = { path = "../../../cust" }
anyhow = "1.0.44"
glfw = "0.42.0"
gl = "0.14.0"
num-traits = "0.2.14"
