[package]
name = "ex04_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix = {path = "../../"}
cust = {path = "../../../cust", features=["glam"]}
anyhow = "1.0.44"
glfw = "0.42.0"
gl = "0.14.0"
num-traits = "0.2.14"
glam = { git = "https://github.com/anderslanglands/glam-rs", branch = "cuda", features=["cuda"] }

[build-dependencies]
find_cuda_helper = { version = "0.1", path = "../../../find_cuda_helper" }
