[package]
name = "ex04_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix = {path = "../../"}
cust = {path = "../../../cust", features=["impl_glam"]}
anyhow = "1.0.44"
glfw = "0.42.0"
gl = "0.14.0"
num-traits = "0.2.14"
glam = { version = "0.29.2", features=["cuda"] }

[build-dependencies]
find_cuda_helper = { version = "0.2", path = "../../../find_cuda_helper" }
cuda_builder = { version = "0.3", path = "../../../cuda_builder" }
